@@ -11,22 +11,6 @@ use File::Spec;
 use GraphViz2;
 use GraphViz2::Data::Grapher;
 
-use Log::Handler;
-
-# ------------------------------------------------
-
-my($logger) = Log::Handler -> new;
-
-$logger -> add
-	(
-	 screen =>
-	 {
-		 maxlevel       => 'debug',
-		 message_layout => '%m',
-		 minlevel       => 'error',
-	 }
-	);
-
 my($sub) = sub{};
 my($s)   =
 {
@@ -61,11 +45,10 @@ my($graph) = GraphViz2 -> new
 	 edge   => {color => 'grey'},
 	 global => {directed => 1},
 	 graph  => {rankdir => 'TB'},
-	 logger => $logger,
 	 node   => {color => 'blue', shape => 'oval'},
 	);
 
-my($g)           = GraphViz2::Data::Grapher -> new(graph => $graph, logger => $logger);
+my($g)           = GraphViz2::Data::Grapher->new(graph => $graph);
 my($format)      = shift || 'svg';
 my($output_file) = shift || File::Spec -> catfile('html', "parse.data.$format");
 
